--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^4.2.1",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^4.1.0",
     "transform-class-properties": "^0.1.0",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-shell-plugin-next": "^1.2.0"
   }
 }
