working through node modules and deploy

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "webpack",
     "deploy": "webpack && shopify-themekit deploy"
   },
+  "dependencies": {
+    "validator": "^13.1.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
