--- a/src/config/settings_data.json
+++ b/src/config/settings_data.json
@@ -1,6 +1,54 @@
 {
   "current": "Default",
   "presets": {
-    "Default": { }
+    "Default": {
+      "sections": {
+        "banner-with-text": {
+          "type": "banner-with-text",
+          "blocks": {
+            "banner-with-text-0": {
+              "type": "select"
+            },
+            "banner-with-text-1": {
+              "type": "select"
+            }
+          }
+        },
+        "collection-list": {
+          "type": "collection-list",
+          "blocks": {
+            "collection-list-0": {
+              "type": "collection"
+            },
+            "collection-list-1": {
+              "type": "collection"
+            },
+            "collection-list-2": {
+              "type": "collection"
+            }
+          },
+          "block_order": [
+            "collection-list-0",
+            "collection-list-1",
+            "collection-list-2"
+          ]
+        },
+        "featured-collection": {
+          "type": "featured-collection",
+          "settings": {
+            "collection": "frontpage"
+          }
+        },
+        "featured-product": {
+          "type": "featured-product"
+        }
+      },
+      "content_for_index": [
+        "banner-with-text",
+        "collection-list",
+        "featured-collection",
+        "featured-product"
+      ]
+    }
   }
 }
