--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Mike Salvati",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development webpack --watch",
-    "build": "webpack && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid",
-    "deploy": "webpack && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid && shopify-themekit deploy"
+    "start": "webpack --mode=development --watch",
+    "build": "webpack --mode=production && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid",
+    "deploy": "webpack --mode=production && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid && shopify-themekit deploy"
   },
   "dependencies": {
     "tailwindcss": "^1.9.6",
@@ -18,25 +18,29 @@
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
-    "@shopify/themekit": "^1.1.4",
-    "autoprefixer": "^9.8.6",
+    "@shopify/themekit": "^1.1.6",
+    "autoprefixer": "^10.0.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "browser-sync": "^2.26.12",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.2",
-    "css-loader": "^4.2.1",
+    "copy-webpack-plugin": "^6.3.0",
+    "css-loader": "^5.0.1",
     "file-loader": "^6.0.0",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^4.0.4",
+    "prettier": "^2.1.2",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "transform-class-properties": "^1.0.0-beta",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-shell-plugin-next": "^1.2.0"
+    "webpack": "^5.4.0",
+    "webpack-bundle-analyzer": "^4.1.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-shell-plugin-next": "^2.0.8",
+    "yargs": "^16.1.0"
   }
 }
