--- a/config.yml.example
+++ b/config.yml.example
@@ -1,7 +1,17 @@
 development:
-  password: 
+  password:
   theme_id: ""
-  store: 
+  store:
+  directory: dist/
+  ignore_files:
+    - config/settings_data.json
+    - "*.js"
+    - "*.hot-update.json"
+
+production:
+  password:
+  theme_id: ""
+  store:
   directory: dist/
   ignore_files:
     - config/settings_data.json
