--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
     "sass-loader": "^10.1.0",
+    "string-loader": "^0.0.1",
     "style-loader": "^2.0.0",
     "transform-class-properties": "^1.0.0-beta",
     "webpack": "^5.4.0",
