--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "file-loader": "^6.0.0",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
+    "liquidjs": "^9.16.1",
+    "liquidjs-section-tags": "^1.0.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
