--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "webpack --mode=production && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid && shopify-themekit deploy --env=production"
   },
   "dependencies": {
+    "sass": "^1.29.0",
     "tailwindcss": "^1.9.6",
     "validator": "^13.1.1"
   },
@@ -31,7 +32,6 @@
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "liquidjs": "^9.16.1",
-    "liquidjs-section-tags": "^1.0.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "postcss-loader": "^4.0.4",
