--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.11.0",
     "@shopify/eslint-plugin": "^39.0.3",
     "@shopify/themekit": "^1.1.6",
@@ -30,15 +31,13 @@
     "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^5.0.1",
     "eslint": "7.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "4.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-webpack-plugin": "^2.4.0",
     "file-loader": "^6.0.0",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^1.3.1",
+    "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
