--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "deploy": "webpack --mode=production && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid && shopify-themekit deploy --env=production"
   },
   "dependencies": {
-    "tailwindcss": "^1.9.6",
     "validator": "^13.1.1"
   },
   "devDependencies": {
@@ -21,7 +20,7 @@
     "@babel/preset-env": "^7.11.0",
     "@shopify/eslint-plugin": "^39.0.3",
     "@shopify/themekit": "^1.1.6",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.0.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -39,10 +38,12 @@
     "mini-css-extract-plugin": "^1.3.1",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
+    "postcss": "^8.1.10",
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.1",
     "transform-class-properties": "^1.0.0-beta",
     "webpack": "^5.4.0",
     "webpack-bundle-analyzer": "^4.1.0",
