--- a/config.yml.example
+++ b/config.yml.example
@@ -5,6 +5,14 @@ development:
   directory: dist/
   ignore_files:
     - config/settings_data.json
+
+devServer:
+  password:
+  theme_id: ""
+  store:
+  directory: dist/
+  ignore_files:
+    - config/settings_data.json
     - "*.js"
     - "*.hot-update.json"
 
