--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Mike Salvati",
   "private": true,
   "scripts": {
-    "start": "webpack serve --mode=development --config webpack.dev.js",
-    "build": "webpack --mode=production --config webpack.prod.js && npx tailwindcss build -i src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid",
-    "deploy": "webpack --mode=production --config webpack.prod.js && npx tailwindcss build -i src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid && shopify-themekit deploy --env=production"
+    "start": "TAILWIND_MODE=watch webpack serve --mode=development --config webpack.dev.js",
+    "build": "TAILWIND_MODE=build webpack --mode=production --config webpack.prod.js && npx tailwindcss build -i src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid",
+    "deploy": "TAILWIND_MODE=build webpack --mode=production --config webpack.prod.js && npx tailwindcss build -i src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid && shopify-themekit deploy --env=production"
   },
   "dependencies": {
     "validator": "^13.5.2"
@@ -53,7 +53,7 @@
     "tailwindcss": "^2.2.2",
     "transform-class-properties": "^1.0.0-beta",
     "typescript": "^4.1.3",
-    "webpack": "^5.18.0",
+    "webpack": "^5.39.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2",
