--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Mike Salvati",
   "private": true,
   "scripts": {
-    "start": "webpack serve --mode=development --config webpack.dev.js",
+    "start": "TAILWIND_MODE=watch webpack serve --mode=development --config webpack.dev.js",
     "build": "webpack --mode=production --config webpack.prod.js && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid",
     "deploy": "webpack --mode=production --config webpack.prod.js && npx tailwindcss build src/components/tailwind.css -o dist/assets/tailwind.css.liquid && cleancss -o dist/assets/tailwind.min.css.liquid dist/assets/tailwind.css.liquid && shopify-themekit deploy --env=production"
   },
@@ -20,7 +20,7 @@
     "@babel/preset-env": "^7.12.11",
     "@shopify/eslint-plugin": "^39.0.4",
     "@shopify/themekit": "^1.1.7",
-    "autoprefixer": "^10.2.3",
+    "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -43,14 +43,14 @@
     "mini-css-extract-plugin": "^1.3.4",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
-    "postcss": "^8.2.4",
+    "postcss": "^8.3.6",
     "postcss-loader": "^4.2.0",
     "prettier": "^2.2.1",
     "raw-loader": "^4.0.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^2.2.7",
     "transform-class-properties": "^1.0.0-beta",
     "typescript": "^4.1.3",
     "webpack": "^5.18.0",
